--- a/P5_02_code.ipynb
+++ b/P5_02_code.ipynb
@@ -6,7 +6,7 @@
       "name": "P5_02_code.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJOv/r7jhzMmk0l+06FEYi",
+      "authorship_tag": "ABX9TyNZ9w58CqzuoccA/D6Is1rN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -710,7 +710,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##### 1.2.2.1. Ajout de la variable : Proportion de protéines animales par rapport aux protéines totales"
+        "#### 1.2.3. Ajout de la variable : Proportion de protéines animales par rapport aux protéines totales"
       ]
     },
     {
@@ -853,7 +853,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##### 1.2.2.2. Ajout de la variable : Disponibilité alimentaire en protéines par habitant"
+        "#### 1.2.4. Ajout de la variable : Disponibilité alimentaire en protéines par habitant"
       ]
     },
     {
@@ -878,7 +878,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##### 1.2.2.3. Ajout de la variable : Disponibilité alimentaire en calories par habitant"
+        "#### 1.2.5. Ajout de la variable : Disponibilité alimentaire en calories par habitant"
       ]
     },
     {
@@ -901,7 +901,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 1.3. Sélection des colonnes pour le reste de l'étude"
+        "### 1.3. Sélection des variables pour le reste de l'étude"
       ]
     },
     {
@@ -1031,7 +1031,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 2.1. Normalité de la distribution de la variable proportion de protéines animales sur protéines totales"
+        "### 2.1. #Adéquation à une loi statistique de la variable : Proportion de protéines animales sur protéines totales"
       ]
     },
     {
@@ -1148,7 +1148,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 2.2. Adéquation à une loi statistique de la variable : croissance de la population"
+        "### 2.2. Adéquation à une loi statistique de la variable : Croissance de la population"
       ]
     },
     {
@@ -1265,7 +1265,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 2.3. Adéquation à une loi statistique de la variable : disponibilité alimentaire en protéines par habitant"
+        "### 2.3. Adéquation à une loi statistique de la variable : Disponibilité alimentaire en protéines par habitant"
       ]
     },
     {
@@ -1382,7 +1382,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 2.4. Adéquation à une loi statistique de la variable : disponibilité alimentaire en calories par habitant"
+        "### 2.4. Adéquation à une loi statistique de la variable : Disponibilité alimentaire en calories par habitant"
       ]
     },
     {
